[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adaos-rasa-nlu"
version = "0.1.0"
description = "AdaOS-controlled Rasa 3.6 NLU port for Python 3.11.9"
readme = "README.md"
requires-python = ">=3.11.9,<3.12"
license = {text = "Apache-2.0"}
authors = [
  {name = "AdaOS Team"},
  {name = "Rasa Technologies GmbH"},
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "attrs>=19.3,<22.2",
  "coloredlogs>=10,<16",
  "dask==2023.12.1",
  "jax==0.4.30",
  "jaxlib==0.4.30",
  "jsonpickle>=1.3,<3.1",
  "jsonschema>=4.17,<4.18",
  "networkx==2.8.8",
  "numpy==1.23.5",
  "packaging==20.9",
  "pluggy>=1.0,<2.0",
  "portalocker>=2.7,<3.0",
  "prompt-toolkit==3.0.28",
  "protobuf==4.23.3",
  "pykwalify>=1.7,<1.9",
  "python-dateutil>=2.8,<3.0",
  "pytz>=2019.1,<2023.0",
  "PyYAML>=6.0,<7.0",
  "randomname>=0.1.5,<0.2.0",
  "regex==2022.10.31",
  "requests>=2.31,<3.0",
  "ruamel.yaml==0.17.21",
  "safetensors>=0.4.5,<0.5",
  "scikit-learn==1.2.2",
  "scipy==1.10.1",
  "setuptools>=70.3.0,<71.0",
  "sklearn-crfsuite>=0.3,<0.4",
  "skops==0.9.0",
  "SQLAlchemy>=1.4.0,<1.5.0",
  "structlog>=23.1,<24.0",
  "tarsafe>=0.0.3,<0.0.5",
  "tensorflow==2.12.0; platform_machine != 'arm64' and platform_machine != 'aarch64'",
  "tensorflow-intel==2.12.0; sys_platform == 'win32'",
  "tensorflow-io-gcs-filesystem==0.31.0; sys_platform == 'win32'",
  "tensorflow-io-gcs-filesystem==0.32.0; sys_platform == 'linux'",
  "tqdm>=4.31,<5.0",
  "typing-extensions>=4.1.1,<5.0.0",
  "typing-utils>=0.1.0,<0.2.0",
  "colorama>=0.4.4,<0.5; sys_platform == 'win32'",
]

[project.optional-dependencies]
test = [
  "pytest>=8.2,<9.0",
]
spacy = [
  "spacy>=3.4,<3.5",
  "pydantic<1.10.10",
]
transformers = [
  "transformers>=4.36.2,<4.37",
  "sentencepiece>=0.1.99,<0.2",
]
jieba = [
  "jieba>=0.39,<0.43",
]

[project.scripts]
rasa = "rasa.__main__:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["rasa*", "adaos_rasa_nlu*"]

[tool.setuptools.package-data]
rasa = [
  "engine/recipes/config_files/*.yml",
  "shared/core/training_data/*.html",
  "shared/nlu/training_data/schemas/*.yml",
  "shared/utils/schemas/*.yml",
]

[tool.pytest.ini_options]
addopts = "-q --strict-markers"
testpaths = ["tests_contract"]
markers = [
  "contract: AdaOS Rasa NLU port contract tests",
  "integration: tests that train or load a model",
  "slow: tests that can take noticeably longer",
]

[tool.ruff]
line-length = 88
target-version = "py311"
